1.1.0 恢复版：v1.0.9 启动链路 + 最小 LWJGL2 支持 + 24 文件改进 + jni 渲染桥